[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/credits.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/backgroundAmbient.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.635294, 0.635294, 0.635294, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.901961, 0.901961, 0.901961, 1 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=9]
resource_name = "FadeOut"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.87451, 0.87451, 1 ), Color( 0.87451, 0.87451, 0.87451, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOut:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Thanks" type="ColorRect" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="ThankYou" type="Label" parent="Thanks"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.5
margin_top = -209.0
margin_right = 259.5
margin_bottom = -149.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "THANKS FOR PLAYING!"
align = 1
valign = 1

[node name="Credit" type="Panel" parent="Thanks"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -134.0
margin_right = 260.0
margin_bottom = 54.0
custom_styles/panel = SubResource( 10 )

[node name="OriginalBy" type="Label" parent="Thanks/Credit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -94.0
margin_right = 260.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Original made by:"
align = 1
valign = 1

[node name="Brackeys" type="Label" parent="Thanks/Credit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.5
margin_top = -68.7832
margin_right = 259.5
margin_bottom = -8.7832
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "BRACKEYS"
align = 1
valign = 1

[node name="ConversBy" type="Label" parent="Thanks/Credit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = 9.0
margin_right = 260.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Godot conversion by:"
align = 1
valign = 1

[node name="DarkPro1337" type="Label" parent="Thanks/Credit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.5
margin_top = 34.2168
margin_right = 259.5
margin_bottom = 94.2168
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "DARKPRO1337"
align = 1
valign = 1

[node name="Buttons" type="Panel" parent="Thanks"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = 71.0
margin_right = 90.5
margin_bottom = 216.0
custom_styles/panel = SubResource( 11 )

[node name="Quit" type="Button" parent="Thanks/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -72.5
margin_right = 90.5
margin_bottom = -29.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
text = "QUIT"

[node name="Retry" type="Button" parent="Thanks/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = -21.5
margin_right = 90.5
margin_bottom = 21.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
text = "RETRY"

[node name="Menu" type="Button" parent="Thanks/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.5
margin_top = 29.5
margin_right = 90.5
margin_bottom = 72.5
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 1 )
text = "BACK TO MENU"

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.87451, 0.87451, 0.87451, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FadeOut"
anims/FadeOut = SubResource( 9 )

[node name="backgroundAmbient" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="Thanks/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Thanks/Buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Thanks/Buttons/Menu" to="." method="_on_Menu_pressed"]
